Fixed Deploy Incompabilities